removes enable preview