@@ -18,7 +18,7 @@
     <packaging>pom</packaging>
 
     <properties>
-        <java.version>15</java.version>
+        <java.version>17</java.version>
         <spring.cloud.version>2020.0.0-M3</spring.cloud.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -33,8 +33,8 @@
         <maven.plugin.version.version>2.7</maven.plugin.version.version>
         <maven.plugin.dockerfile.version>1.4.13</maven.plugin.dockerfile.version>
         <springfox.swagger.version>3.0.0-SNAPSHOT</springfox.swagger.version>
-        <org.mapstruct.version>1.4.0.Beta1</org.mapstruct.version>
-        <org.lombok.version>1.18.12</org.lombok.version>
+        <org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
+        <org.lombok.version>1.18.30</org.lombok.version>
 
         <!--Plugins control points -->
         <maven.deploy.skip>true</maven.deploy.skip>
@@ -110,7 +110,6 @@
                     <version>${maven.compiler.plugin.version}</version>
                     <configuration>
                         <release>${java.version}</release>
-                        <compilerArgs>--enable-preview</compilerArgs>
                         <annotationProcessorPaths>
                             <path>
                                 <groupId>org.mapstruct</groupId>
@@ -129,7 +128,6 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven.surefire.plugin.version}</version>
                     <configuration>
-                        <argLine>--enable-preview</argLine>
                         <includes>
                             <include>**/*Tests.java</include>
                             <include>**/*Test.java</include>
@@ -139,9 +137,6 @@
                 <plugin>
                     <artifactId>maven-failsafe-plugin</artifactId>
                     <version>${maven.failsafe.plugin.version}</version>
-                    <configuration>
-                        <argLine>--enable-preview</argLine>
-                    </configuration>
                 </plugin>
                 <plugin>
                     <!--
